--- a/ShareTimetable/Info.plist
+++ b/ShareTimetable/Info.plist
@@ -4,16 +4,19 @@
 <dict>
 	<key>NSExtension</key>
 	<dict>
+        <key>NSExtensionPrincipalClass</key>
+        <string>CustomShareNavigationController</string>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>NSExtensionActivationRule</key>
 			<dict>
 				<key>NSExtensionActivationSupportsFileWithMaxCount</key>
 				<integer>1</integer>
+                <key>NSExtensionActivationSupportsWebURLWithMaxCount</key>
+                <integer>1</integer>
 			</dict>
 		</dict>
-		<key>NSExtensionMainStoryboard</key>
-		<string>MainInterface</string>
+
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.share-services</string>
 	</dict>
