--- a/ShareTimetable/ShareTimetable.entitlements
+++ b/ShareTimetable/ShareTimetable.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.com.hughdrummond.Social-Timetable</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)com.hughdrummond.Social-Timetable</string>
+	</array>
 </dict>
 </plist>
